legion olympus added

--- a/language/en/units.json
+++ b/language/en/units.json
@@ -711,6 +711,7 @@
 			"leglht": "Pharos",
 			"leglab": "Legion Bot Lab",
 			"leglob": "Lobber",
+			"leglrpc": "Olympus,",
 			"leglupara": "Lupara",
 			"legmed": "Medusa",
 			"legmex": "Metal Extractor",
@@ -1500,6 +1501,7 @@
 			"leglab": "Bot Lab",
 			"legdtr": "Pop-up Riot Cannon Turret",
 			"leglob": "Light Plasma Bot",
+			"leglrpc": "Long-Range Cluster Plasma Cannon",
 			"leglupara": "Bomb-Resistant Medium-Range Anti-Air Flak Battery",
 			"legmed": "Heavy Rocket Tank",  
 			"legmex": "Extracts Slightly Reduced Metal and Produces 7 Energy",
