fix name for olympus

--- a/language/en/units.json
+++ b/language/en/units.json
@@ -711,7 +711,7 @@
 			"leglht": "Pharos",
 			"leglab": "Legion Bot Lab",
 			"leglob": "Lobber",
-			"leglrpc": "Olympus,",
+			"leglrpc": "Olympus",
 			"leglupara": "Lupara",
 			"legmed": "Medusa",
 			"legmex": "Metal Extractor",
