--- a/language/en/units.json
+++ b/language/en/units.json
@@ -709,6 +709,7 @@
 			"leglht": "Pharos",
 			"leglab": "Legion Bot Lab",
 			"leglob": "Lobber",
+			"leglraa": "Xyston",
 			"leglrpc": "Olympus",
 			"leglupara": "Lupara",
 			"legmed": "Medusa",
@@ -1497,6 +1498,7 @@
 			"leglab": "Bot Lab",
 			"legdtr": "Pop-up Riot Cannon Turret",
 			"leglob": "Light Plasma Bot",
+			"leglraa": "Long-Range Rail Accelerator",
 			"leglrpc": "Long-Range Cluster Plasma Cannon",
 			"leglupara": "Bomb-Resistant Medium-Range Anti-Air Flak Battery",
 			"legmed": "Heavy Rocket Tank",  
