add dead lraa model, update description

--- a/language/en/units.json
+++ b/language/en/units.json
@@ -1498,7 +1498,7 @@
 			"leglab": "Bot Lab",
 			"legdtr": "Pop-up Riot Cannon Turret",
 			"leglob": "Light Plasma Bot",
-			"leglraa": "Long-Range Rail Accelerator",
+			"leglraa": "Long-Range Anti-Air Rail Accelerator",
 			"leglrpc": "Long-Range Cluster Plasma Cannon",
 			"leglupara": "Bomb-Resistant Medium-Range Anti-Air Flak Battery",
 			"legmed": "Heavy Rocket Tank",  
