add proteus replacing twitcher

--- a/language/en/units.json
+++ b/language/en/units.json
@@ -637,6 +637,7 @@
 			"cor_hat_hornet": "Hornet's Tricorn",
 			"cor_hat_ptaq": "PtaQ's Hat",
 			"leegmech": "Praetorian",
+			"legaceb": "Proteus",
 			"legacluster": "Eviscerator",
 			"legalab": "Legion Advanced Bot Lab",
 			"legah": "Alpheus",
@@ -1427,6 +1428,7 @@
 			"cor_hat_hornet": "A weathered yet dapper tricorn",
 			"cor_hat_ptaq": "The finest bonnet in all of Gnomedom",
 			"leegmech": "Armored Assault Mech",
+			"legaceb": "Combat Engineer",
 			"legacluster": "Pop-up Cluster Plasma Artillery",
 			"legalab": "Advanced Bot Lab",
 			"legah": "Anti-Air Hovercraft",
