--- a/language/en/units.json
+++ b/language/en/units.json
@@ -645,6 +645,7 @@
 			"legack": "Advanced Construction Bot",
 			"legacv": "Advanced Construction Vehicle",
 			"legadvsol": "Advanced Solar Collector",
+			"legamsub": "Amphibious Complex",
 			"legassistdrone": "Assist Drone",
 			"legassistdrone_land": "Assist Vehicle",
 			"legatrans": "Aeolus",
@@ -1432,6 +1433,7 @@
 			"legack": "Tech 2 Constructor",
 			"legacv": "Tech 2 Constructor",
 			"legadvsol": "Produces 100 Energy",
+			"legamsub": "Produces Amphibious / Underwater Units",
 			"legassistdrone": "Portable Buildpower",
 			"legassistdrone_land": "Portable Buildpower",
 			"legatrans": "Air Transport",
