--- a/language/en/units.json
+++ b/language/en/units.json
@@ -695,6 +695,7 @@
 			"leggant": "Experimental Gantry",
 			"leggat": "Decurion",
 			"legsh": "Glaucus",
+			"legsilo": "Supernova",
 			"leggob": "Goblin",
 			"leghades": "Alaris",
 			"leghelios": "Helios",
@@ -1485,6 +1486,7 @@
 			"leggant": "Produces Experimental Units",
 			"leggat": "Armored Assault Tank",
 			"legsh": "Fast Attack Hovercraft",
+			"legsilo": "Nuclear ICBM Launcher",
 			"leggob": "Light Skirmish Bot",
 			"leghades": "Fast Assault Tank",
 			"leghelios": "Skirmisher Tank",
