add cetus, upgrade otter unitpic and lights

--- a/language/en/units.json
+++ b/language/en/units.json
@@ -648,6 +648,7 @@
 			"legacv": "Advanced Construction Vehicle",
 			"legadvsol": "Advanced Solar Collector",
 			"legamsub": "Amphibious Complex",
+			"legamphtank": "Cetus",
 			"legassistdrone": "Assist Drone",
 			"legassistdrone_land": "Assist Vehicle",
 			"legatrans": "Aeolus",
@@ -1444,6 +1445,7 @@
 			"legacv": "Tech 2 Constructor",
 			"legadvsol": "Produces 100 Energy",
 			"legamsub": "Produces Amphibious / Underwater Units",
+			"legamphtank": "Light Amphibious Tank",
 			"legassistdrone": "Portable Buildpower",
 			"legassistdrone_land": "Portable Buildpower",
 			"legatrans": "Air Transport",
