fix construction unit flavour text

--- a/language/en/units.json
+++ b/language/en/units.json
@@ -1472,11 +1472,11 @@
 			"legcomt2def": "Improved Resource Generation with EMP Grenade and Plasma Shield",
 			"legcomt2off": "Improved Speed, Able to Build Units, Short-Range Jammer, Survives Falls",
 			"legcomt2com": "Increased Size, Health, and Weapon Count, but Moves Slowly",
-			"legca": "Construction Aircraft",
+			"legca": "Tech 1 Constructor",
 			"legch": "Tech 1 Constructor",
 			"legcib": "Drops a Juno Bomb to Remove Mines, Scouts, Radars, and Jammers",
-			"legck": "Construction Bot",
-			"legcv": "Construction Vehicle",
+			"legck": "Tech 1 Constructor",
+			"legcv": "Tech 1 Constructor",
 			"legcluster": "Area Control Cluster Artillery",
 			"legdrag": "Fortification",
 			"legdtf": "Pop-up Flamethrower Turret",
