added hermes, modelled by flaka and tharsy
Co-Authored-By: fruehling76 <39665636+fruehling76@users.noreply.github.com>

--- a/language/en/units.json
+++ b/language/en/units.json
@@ -696,6 +696,7 @@
 			"legfort": "Tyrannus",
 			"leggant": "Experimental Gantry",
 			"leggat": "Decurion",
+			"legscout": "Hermes",
 			"legsh": "Glaucus",
 			"legsilo": "Supernova",
 			"leggob": "Goblin",
@@ -1492,6 +1493,7 @@
 			"legfort": "Flying Fortress",
 			"leggant": "Produces Experimental Units",
 			"leggat": "Armored Assault Tank",
+			"legscout": "Light Scout Vehicle",
 			"legsh": "Fast Attack Hovercraft",
 			"legsilo": "Nuclear ICBM Launcher",
 			"leggob": "Light Skirmish Bot",
