Remodel legion minelayer/alaris
Added new minelayer for legion (has cor stats for now)
Remodeled Alaris

--- a/language/en/units.json
+++ b/language/en/units.json
@@ -749,6 +749,7 @@
 			"legwhisper": "Whisper",
 			"legwin": "Wind Turbine",
 			"legwint2": "Tech 2 Wind Turbine",
+			"legmlv": "Sapper",
 			"lootboxbronze": "Bronze Resource Generator",
 			"lootboxgold": "Gold Resource Generator",
 			"lootboxnano_t1": "Bronze Unit Printer",
@@ -1545,6 +1546,7 @@
 			"legwhisper": "Radar / Sonar Plane",
 			"legwin": "Produces Energy. Depends on wind strength.",
 			"legwint2": "Produces Energy. Depends on wind strength.",
+			"legmlv": "Stealthy Minelayer / Minesweeper",
 			"lootboxbronze": "Capture & Transport",
 			"lootboxgold": "Capture & Transport",
 			"lootboxnano_t1": "Portable Factory. Capture & Transport",
