--- a/language/en/units.json
+++ b/language/en/units.json
@@ -681,6 +681,7 @@
 			"legcomt2off": "Tactical Offense Commander",
 			"legcomt2com": "Combat Commander",
 			"legcluster": "Amputator",
+			"legcs": "Construction Ship",
 			"legdecom": "Legion Commander",
 			"legdrag": "Dragon's Teeth",
 			"legdtf": "Dragon's Maw",
@@ -702,6 +703,8 @@
 			"legsilo": "Supernova",
 			"leggob": "Goblin",
 			"leghades": "Alaris",
+			"leghastatus": "Hastatus",
+			"leghastatusalt": "Hastatus",
 			"leghelios": "Helios",
 			"leghp": "Hovercraft Platform",
 			"leginc": "Incinerator",
@@ -731,9 +734,11 @@
 			"legnap": "Wildfire",
 			"legner": "Nereus",
 			"legotter": "Otter",
+			"legoptio": "Optio",
 			"legpede": "Mukade",
 			"legperdition": "Perdition",
 			"legphoenix": "Phoenix",
+			"legpt": "Pontus",
 			"legrad": "Radar Tower",
 			"legrail": "Lance",
 			"legrl": "Bramble",
@@ -743,11 +748,15 @@
 			"legshot": "Phalanx",
 			"legsrail": "Arquebus",
 			"legstr": "Strider",
+			"legstingray":"Stingray",
 			"legstronghold": "Stronghold",
 			"legstarfall": "Starfall",
+			"legtriarius": "Destroyer",
+			"legtriariusalt": "Destroyer",
 			"legvcarry": "Mantis",
 			"legvenator": "Venator",
 			"legvision": "Vision",
+			"legvelite": "Velite",
 			"legvp": "Legion Vehicle Lab",
 			"legwhisper": "Whisper",
 			"legwin": "Wind Turbine",
@@ -1479,6 +1488,7 @@
 			"legch": "Tech 1 Constructor",
 			"legcib": "Drops a Juno Bomb to Remove Mines, Scouts, Radars, and Jammers",
 			"legck": "Tech 1 Constructor",
+			"legcs": "Tech 1 Construction Ship",
 			"legcv": "Tech 1 Constructor",
 			"legcluster": "Area Control Cluster Artillery",
 			"legdecom": "Decoy Commander",
@@ -1501,6 +1511,8 @@
 			"legsilo": "Nuclear ICBM Launcher",
 			"leggob": "Light Skirmish Bot",
 			"leghades": "Fast Assault Tank",
+			"leghastatus": "Assault Frigate",
+			"leghastatusalt": "Assault Frigate",
 			"leghelios": "Skirmisher Tank",
 			"leghp": "Builds Hovercraft",
 			"leginc": "(barely) Mobile Heavy Heat Ray",
@@ -1530,9 +1542,11 @@
 			"legnap": "Drops Napalm onto a Large Area",
 			"legner": "Hovertank",
 			"legotter": "Amphibious Construction Vehicle",
+			"legoptio": "Anti-Air Support Ship",
 			"legpede": "Heavy Multi-Weapon Assault Mech",
 			"legperdition": "Long Range Napalm Launcher",
 			"legphoenix": "Heavy Ground Assault Aircraft",
+			"legpt": "Anti Submarine Scout Craft",
 			"legrad": "Early Warning System",
 			"legjam": "Medium-Range Jamming Device",
 			"legrail": "Long-range Skirmisher / Anti-air",
@@ -1543,11 +1557,15 @@
 			"legshot": "Shielded Assault Bot",
 			"legsrail": "All-Terrain Heavy Railgun",
 			"legstr": "Fast Raider Bot",
+			"legstingray": "Assault Submarine",
 			"legstronghold": "Armed Transport",
 			"legstarfall": "Long range plasma launcher (360k energy per volley)",
+			"legtriarius": "Heavy Heatray Artillery Boat",
+			"legtriariusalt": "Heavy Artillery Boat",
 			"legvcarry": "Carries 4 Drones (costs 15m 500E each)",
 			"legvenator": "Fast High Damage Interceptor",
 			"legvision": "Provides Temporary Vision",
+			"legvelite": "Light Corvette",
 			"legvp": "Vehicle Lab",
 			"legwhisper": "Radar / Sonar Plane",
 			"legwin": "Produces Energy. Depends on wind strength.",
