--- a/language/en/units.json
+++ b/language/en/units.json
@@ -751,8 +751,8 @@
 			"legstingray":"Stingray",
 			"legstronghold": "Stronghold",
 			"legstarfall": "Starfall",
-			"legtriarius": "Destroyer",
-			"legtriariusalt": "Destroyer",
+			"legtriarius": "Triarius",
+			"legtriariusalt": "Portent",
 			"legvcarry": "Mantis",
 			"legvenator": "Venator",
 			"legvision": "Vision",
@@ -1560,8 +1560,8 @@
 			"legstingray": "Assault Submarine",
 			"legstronghold": "Armed Transport",
 			"legstarfall": "Long range plasma launcher (360k energy per volley)",
-			"legtriarius": "Heavy Heatray Artillery Boat",
-			"legtriariusalt": "Heavy Artillery Boat",
+			"legtriarius": "Destroyer",
+			"legtriariusalt": "Bombardment Support Vessel",
 			"legvcarry": "Carries 4 Drones (costs 15m 500E each)",
 			"legvenator": "Fast High Damage Interceptor",
 			"legvision": "Provides Temporary Vision",
