--- a/language/en/units.json
+++ b/language/en/units.json
@@ -701,6 +701,7 @@
 			"legscout": "Hermes",
 			"legsh": "Glaucus",
 			"legsilo": "Supernova",
+			"legsy": "Shipyard",
 			"leggob": "Goblin",
 			"leghades": "Alaris",
 			"leghastatus": "Hastatus",
@@ -1509,6 +1510,7 @@
 			"legscout": "Light Scout Vehicle",
 			"legsh": "Fast Attack Hovercraft",
 			"legsilo": "Nuclear ICBM Launcher",
+			"legsy": "Produces Tech 1 Ships",
 			"leggob": "Light Skirmish Bot",
 			"leghades": "Fast Assault Tank",
 			"leghastatus": "Assault Frigate",
