making it snappy

--- a/language/en/units.json
+++ b/language/en/units.json
@@ -698,6 +698,7 @@
 			"legscout": "Hermes",
 			"legsh": "Glaucus",
 			"legsilo": "Supernova",
+			"legsnapper": "Snapper",
 			"leggob": "Goblin",
 			"leghades": "Alaris",
 			"leghelios": "Helios",
@@ -1495,6 +1496,7 @@
 			"legscout": "Light Scout Vehicle",
 			"legsh": "Fast Attack Hovercraft",
 			"legsilo": "Nuclear ICBM Launcher",
+			"legsnapper": "Amphibious Screwdrive Bomb",
 			"leggob": "Light Skirmish Bot",
 			"leghades": "Fast Assault Tank",
 			"leghelios": "Skirmisher Tank",
