--- a/language/en/units.json
+++ b/language/en/units.json
@@ -738,7 +738,7 @@
 			"legpede": "Mukade",
 			"legperdition": "Perdition",
 			"legphoenix": "Phoenix",
-			"legpt": "Pontus",
+			"legpontus": "Pontus",
 			"legrad": "Radar Tower",
 			"legrail": "Lance",
 			"legrl": "Bramble",
@@ -751,6 +751,7 @@
 			"legstingray":"Stingray",
 			"legstronghold": "Stronghold",
 			"legstarfall": "Starfall",
+			"legtide": "Tidal Generator",
 			"legtriarius": "Triarius",
 			"legtriariusalt": "Portent",
 			"legvcarry": "Mantis",
@@ -1547,7 +1548,7 @@
 			"legpede": "Heavy Multi-Weapon Assault Mech",
 			"legperdition": "Long Range Napalm Launcher",
 			"legphoenix": "Heavy Ground Assault Aircraft",
-			"legpt": "Anti Submarine Scout Craft",
+			"legpontus": "Anti Submarine Scout Craft",
 			"legrad": "Early Warning System",
 			"legjam": "Medium-Range Jamming Device",
 			"legrail": "Long-range Skirmisher / Anti-air",
@@ -1561,6 +1562,7 @@
 			"legstingray": "Assault Submarine",
 			"legstronghold": "Armed Transport",
 			"legstarfall": "Long range plasma launcher (360k energy per volley)",
+			"legtide": "Produces Energy (depends on map)",
 			"legtriarius": "Destroyer",
 			"legtriariusalt": "Bombardment Support Vessel",
 			"legvcarry": "Carries 4 Drones (costs 15m 500E each)",
