--- a/language/en/units.json
+++ b/language/en/units.json
@@ -752,6 +752,7 @@
 			"legstronghold": "Stronghold",
 			"legstarfall": "Starfall",
 			"legtide": "Tidal Generator",
+			"legtl": "Piscator",
 			"legtriarius": "Triarius",
 			"legtriariusalt": "Portent",
 			"legvcarry": "Mantis",
@@ -1563,6 +1564,7 @@
 			"legstronghold": "Armed Transport",
 			"legstarfall": "Long range plasma launcher (360k energy per volley)",
 			"legtide": "Produces Energy (depends on map)",
+			"legtl": "Offshore Torpedo Launcher",
 			"legtriarius": "Destroyer",
 			"legtriariusalt": "Bombardment Support Vessel",
 			"legvcarry": "Carries 4 Drones (costs 15m 500E each)",
