--- a/language/en/units.json
+++ b/language/en/units.json
@@ -686,16 +686,17 @@
 			"legdtl": "Dragon's Claw",
 			"legdtm": "Dragon's Tail",
 			"legforti": "Fortification Wall",
-			"legdefcarryt1": "Hive",
 			"legdrone": "Light Combat Drone",
 			"legdtr": "Dragon's Jaw",
 			"legfhp": "Naval Hovercraft Platform",
 			"legfig": "Noctua",
+			"legfhive": "Hive",
 			"legflak": "Ravager",
 			"legfloat": "Triton",
 			"legfort": "Tyrannus",
 			"leggant": "Experimental Gantry",
 			"leggat": "Decurion",
+			"leghive": "Hive",
 			"legscout": "Hermes",
 			"legsh": "Glaucus",
 			"legsilo": "Supernova",
@@ -751,7 +752,7 @@
 			"legstingray":"Stingray",
 			"legstronghold": "Stronghold",
 			"legstarfall": "Starfall",
-			"legtide": "Tidal Generator",
+			"legtide": "Tidalis",
 			"legtl": "Piscator",
 			"legtriarius": "Triarius",
 			"legtriariusalt": "Portent",
@@ -1498,7 +1499,6 @@
 			"legdtl": "Pop-up Lightning Turret",
 			"legdtm": "Pop-up Missile Turret",
 			"legforti": "Advanced Fortification",
-			"legdefcarryt1": "Carries 6 Drones (costs 15m 500E each)",
 			"legdrone": "Light Combat Drone",
 			"legfhp": "Builds Hovercraft",
 			"legfig": "Fighter / Scout Drone",
@@ -1507,6 +1507,8 @@
 			"legfort": "Flying Fortress",
 			"leggant": "Produces Experimental Units",
 			"leggat": "Armored Assault Tank",
+			"legfhive": "Carries 6 Drones (costs 15m 500E each)",
+			"leghive": "Carries 6 Drones (costs 15m 500E each)",
 			"legscout": "Light Scout Vehicle",
 			"legsh": "Fast Attack Hovercraft",
 			"legsilo": "Nuclear ICBM Launcher",
