added legaskirmtank and legaheattank

--- a/language/en/units.json
+++ b/language/en/units.json
@@ -696,7 +696,7 @@
 			"legfort": "Tyrannus",
 			"leggant": "Experimental Gantry",
 			"leggat": "Decurion",
-			"legscout": "Hermes",
+			"legscout": "Wheelie",
 			"legsh": "Glaucus",
 			"legsilo": "Supernova",
 			"legsnapper": "Snapper",
@@ -744,7 +744,8 @@
 			"legrl": "Bramble",
 			"legrhapsis": "Rhapsis",
 			"legsolar": "Solar Collector",
-			"legsco": "Gladiator",
+			"legaskirmtank": "Gladiator",
+			"legaheattank": "Prometheus",
 			"legshot": "Phalanx",
 			"legsrail": "Arquebus",
 			"legstr": "Strider",
@@ -1554,7 +1555,8 @@
 			"legrl": "Light Anti-Air Tower",
 			"legrhapsis": "Salvo Anti-Air Missile Battery",
 			"legsolar": "Produces 20 Energy",
-			"legsco": "Heavy Multi-Weapon Assault Tank",
+			"legaheattank": "Heavy Assault Heatray Tank",
+			"legaskirmtank": "Medium Burst-Fire Skirmisher Tank",
 			"legshot": "Shielded Assault Bot",
 			"legsrail": "All-Terrain Heavy Railgun",
 			"legstr": "Fast Raider Bot",
