add cleaver t2 mobile arty

--- a/language/en/units.json
+++ b/language/en/units.json
@@ -637,6 +637,7 @@
 			"leegmech": "Praetorian",
 			"legaceb": "Proteus",
 			"legacluster": "Eviscerator",
+			"legamcluster": "Cleaver",
 			"legalab": "Legion Advanced Bot Lab",
 			"legah": "Alpheus",
 			"legap": "Legion Drone Plant",
@@ -1452,6 +1453,7 @@
 			"leegmech": "Armored Assault Mech",
 			"legaceb": "Combat Engineer",
 			"legacluster": "Pop-up Cluster Plasma Artillery",
+			"legamcluster": "Mobile Cluster Artillery Vehicle",
 			"legalab": "Advanced Bot Lab",
 			"legah": "Anti-Air Hovercraft",
 			"legap": "Drone Plant",
