boreas mobile rocket launcher added

--- a/language/en/units.json
+++ b/language/en/units.json
@@ -748,6 +748,7 @@
 			"legrhapsis": "Rhapsis",
 			"legsolar": "Solar Collector",
 			"legaskirmtank": "Gladiator",
+			"legavroc": "Boreas",
 			"legaheattank": "Prometheus",
 			"legshot": "Phalanx",
 			"legsrail": "Arquebus",
@@ -1565,6 +1566,7 @@
 			"legsolar": "Produces 20 Energy",
 			"legaheattank": "Heavy Assault Heatray Tank",
 			"legaskirmtank": "Medium Burst-Fire Skirmisher Tank",
+			"legavroc": "Stealthy Mobile Rocket Launcher",
 			"legshot": "Shielded Assault Bot",
 			"legsrail": "All-Terrain Heavy Railgun",
 			"legstr": "Fast Raider Bot",
