make descriptions consistent legcomlvl2-4

--- a/language/en/units.json
+++ b/language/en/units.json
@@ -1472,9 +1472,9 @@
 			"legbombard": "Grenade Launcher Defence",
 			"legcen": "Fast Assault Bot",
 			"legcom": "Commander",
-			"legcomlvl2": "Legion Commander with Minigun and Increased Napalm Range",
-			"legcomlvl3": "Legion Commander with Increased Minigun and Napalm Damage",
-			"legcomlvl4": "Legion Commander with Railguns and Boosted Weapons",
+			"legcomlvl2": "Commander",
+			"legcomlvl3": "Legion Commander and mobile rapid assault factory",
+			"legcomlvl4": "Legion Commander and mobile rapid assault factory",
 			"legcomlvl5": "Legion Commander and mobile rapid assault factory",
 			"legcomlvl6": "Legion Commander and mobile rapid assault factory",
 			"legcomlvl7": "Legion Commander and mobile rapid assault factory",
