it all works, now for polishing

--- a/language/en/units.json
+++ b/language/en/units.json
@@ -365,6 +365,7 @@
 			"raptor_matriarch_fire": "Pyro Matriarch",
 			"raptor_matriarch_spectre": "Spectre Matriarch",
 			"chip": "Chip",
+			"comeffigy": "Commander Effigy",
 			"coraak": "Manticore",
 			"coraap": "Advanced Aircraft Plant",
 			"coraca": "Advanced Construction Aircraft",
@@ -1178,6 +1179,7 @@
 			"raptor_matriarch_fire": "The Mother of the Flamethrower class!",
 			"raptor_matriarch_spectre": "The Mother of the Spectre class!",
 			"chip": "Chip",
+			"comeffigy": "Transposes with Commander upon death; build one only",
 			"coraak": "Heavy Amphibious Anti-Air Bot",
 			"coraap": "Produces Tech 2 Aircraft",
 			"coraca": "Tech 2 Constructor",
