--- a/language/en/units.json
+++ b/language/en/units.json
@@ -726,7 +726,7 @@
 			"legmed": "Medusa",
 			"legmex": "Metal Extractor",
 			"legmext15": "Overcharged Metal Extractor",
-			"legmext2": "Advanced Metal Extractor",
+			"legmoho": "Advanced Metal Extractor",
 			"legmg": "Cacophony",
 			"legmh": "Salacia",
 			"legmineb": "Harbinger",
@@ -1542,7 +1542,7 @@
 			"legmed": "Heavy Rocket Tank",  
 			"legmex": "Extracts Slightly Reduced Metal and Produces 7 Energy",
 			"legmext15": "Extracts Extra Metal at a High Energy Cost",
-			"legmext2": "Advanced Metal Extractor / Storage",
+			"legmoho": "Advanced Metal Extractor / Storage",
 			"legmg": "Heavy Land & Air Defense",
 			"legmh": "Hovercraft Rocket Launcher",
 			"legmineb": "Deploys Clusters of Light Mines onto Target Area",
