--- a/language/en/units.json
+++ b/language/en/units.json
@@ -726,6 +726,7 @@
 			"legmed": "Medusa",
 			"legmex": "Metal Extractor",
 			"legmext15": "Overcharged Metal Extractor",
+			"legmstor": "Metal Storage",
 			"legmoho": "Advanced Metal Extractor",
 			"legmg": "Cacophony",
 			"legmh": "Salacia",
@@ -1542,6 +1543,7 @@
 			"legmed": "Heavy Rocket Tank",  
 			"legmex": "Extracts Slightly Reduced Metal and Produces 7 Energy",
 			"legmext15": "Extracts Extra Metal at a High Energy Cost",
+			"legmstor": "Increases Metal Storage (3000)",
 			"legmoho": "Advanced Metal Extractor / Storage",
 			"legmg": "Heavy Land & Air Defense",
 			"legmh": "Hovercraft Rocket Launcher",
