--- a/language/en/units.json
+++ b/language/en/units.json
@@ -652,6 +652,7 @@
 			"legassistdrone_land": "Assist Vehicle",
 			"legatrans": "Aeolus",
 			"legavp": "Advanced Vehicle Plant",
+			"legamstor": "Hardened Metal Storage",
 			"legbal": "Ballista",
 			"legbar": "Barrage",
 			"legbart": "Belcher",
@@ -1469,6 +1470,7 @@
 			"legassistdrone": "Portable Buildpower",
 			"legassistdrone_land": "Portable Buildpower",
 			"legatrans": "Air Transport",
+			"legamstor": "Increases Metal Storage (10000)",
 			"legavp": "Produces Tech 2 Vehicles",
 			"legbal": "Medium Rocket Bot",
 			"legbar": "Napalm Artillery",
