fix floating converter name

--- a/language/en/units.json
+++ b/language/en/units.json
@@ -694,6 +694,7 @@
 			"legfhp": "Naval Hovercraft Platform",
 			"legfig": "Noctua",
 			"legfhive": "Hive",
+			"legfmkr": "Naval Energy Converter",
 			"legflak": "Ravager",
 			"legfloat": "Triton",
 			"legfort": "Tyrannus",
@@ -1518,6 +1519,7 @@
 			"leggant": "Produces Experimental Units",
 			"leggat": "Armored Assault Tank",
 			"legfhive": "Carries 6 Drones (costs 15m 500E each)",
+			"legfmkr": "Converts 70 energy into 1.1 metal per sec",
 			"leghive": "Carries 6 Drones (costs 15m 500E each)",
 			"legscout": "Light Scout Vehicle",
 			"legsh": "Fast Attack Hovercraft",
