--- a/language/en/units.json
+++ b/language/en/units.json
@@ -1259,7 +1259,7 @@
 			"corcv": "Tech 1 Constructor",
 			"cordecom": "Decoy Commander",
 			"cordemon": "Flamethrower Mech",
-			"cordesolator": "Nuclear ICDM Launcher Submarine",
+			"cordesolator": "Nuclear ICBM Launcher Submarine",
 			"cordl": "Coastal Torpedo Launcher",
 			"cordoom": "Energy Weapon",
 			"cordoomt3": "Super Heavy Heatray Defense",
