--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,5 @@
 ﻿# June 2024
+• [Naval Economy Buildings] Stats made equal to land versions. Specifically, T1 and T2 Energy Convertors, Energy and Metal Storages, and the T2 mex have been harmonised for both Core and Arm.
 • [Rocketeer + Aggravator] Speed and acceleration reduced by 5%
 • [Whistler + Lasher] Changes from proposed units rework modoption moved to base game. {Whistler and Lasher weapon switches from ground and anti-air modes.  Anti-air has 700 range and tracking missiles, while ground has 525/550 range and no tracking.  Ground speeds increased by 10 (45->55, 42->52), ground dps increased by 40% (17->25)}
 • [T1 Air Transports] E costs increased by 70%, buildtime increased by 20%.  This change is to increase the time it takes to rush transports and share them to the team.
