duplicate cor unit for leg to resolve some issues

--- a/language/de/units.json
+++ b/language/de/units.json
@@ -506,6 +506,7 @@
 			"corsub": "Orca",
 			"corsumo": "Mammut",
 			"corsy": "Werft",
+			"legcorsy": "Werft",
 			"cortarg": "Ortungsgerät",
 			"cortermite": "Termite",
 			"corthovr": "Karawane",
@@ -1157,6 +1158,7 @@
 			"corsub": "U-Boot",
 			"corsumo": "Stark gepanzerter Sturmbot",
 			"corsy": "Produziert Tech 1 Schiffe",
+			"legcorsy": "Produziert Tech 1 Schiffe",
 			"cortarg": "Erweiterte Radar-Zielerfassung, weitere Einrichtungen verbessern die Präzision",
 			"cortermite_scav": "Getarnte mittlere Geländespinne mit verbessertem Laser",
 			"cortermite": "Schwere Sturm-Geländespinne",
