--- a/language/en/units.json
+++ b/language/en/units.json
@@ -584,6 +584,7 @@
 			"corsub": "Orca",
 			"corsumo": "Mammoth",
 			"corsy": "Shipyard",
+			"legcorsy": "Shipyard",
 			"cortarg": "Pinpointer",
 			"cortdrone": "Depth Charge Drone",
 			"cortermite": "Termite",
@@ -1380,6 +1381,7 @@
 			"corsub": "Submarine",
 			"corsumo": "Heavily Armored Assault Bot",
 			"corsy": "Produces Tech 1 Ships",
+			"legcorsy": "Produces Tech 1 Ships",
 			"cortarg": "Enhanced Radar Targeting, more facilities enhance accuracy",
 			"cortdrone": "Drops Depth Charges",
 			"cortermite": "Heavy All-terrain Assault Spider",
