--- a/language/zh/units.json
+++ b/language/zh/units.json
@@ -120,6 +120,7 @@
             "armcomboss":"史诗级指挥官 - 最终BOSS",
             "raptor_hive":"公鸡",
             "corsy":"船坞",
+            "legcorsy":"船坞",
             "corfdoom":"毁灭者",
             "leghades":"冥神",
             "raptor_land_swarmer_basic_t2_v1":"掠夺虾",
@@ -715,6 +716,7 @@
             "armcomboss":"妈的,我们死定了!",
             "raptor_hive":"生成外星大虾",
             "corsy":"生产1级船只",
+            "legcorsy":"生产1级船只",
             "corfdoom":"水上多武器平台",
             "leghades":"快速进攻坦克",
             "raptor_land_swarmer_basic_t2_v1":"普通虾",
