--- a/language/de/units.json
+++ b/language/de/units.json
@@ -371,7 +371,7 @@
 			"corcv": "Arbeiterfahrzeug",
 			"cordecom": "Kommandant",
 			"cordemon": "Dämon",
-			"cordeye": "Präzisionsschütze" ,
+			"cordeadeye": "Präzisionsschütze" ,
 			"cordl": "Qualle",
 			"cordoom": "Bollwerk",
 			"cordoomt3": "Episches Bollwerk",
