--- a/language/en/units.json
+++ b/language/en/units.json
@@ -1266,7 +1266,7 @@
 			"corcv": "Tech 1 Constructor",
 			"cordecom": "Decoy Commander",
 			"cordemon": "Flamethrower Mech",
-			"cordeye": "Laser Blaster Bot",
+			"cordeadeye": "Laser Blaster Bot",
 			"cordesolator": "Nuclear ICBM Launcher Submarine",
 			"cordl": "Coastal Torpedo Launcher",
 			"cordoom": "Energy Weapon",
