Update units.json added English translation

--- a/language/en/units.json
+++ b/language/en/units.json
@@ -437,6 +437,7 @@
 			"corcv": "Construction Vehicle",
 			"cordecom": "Commander",
 			"cordemon": "Demon",
+			"cordeadeye": "Deadeye",
 			"cordesolator": "Desolator",
 			"cordl": "Jellyfish",
 			"cordoom": "Bulwark",
