--- a/language/en/units.json
+++ b/language/en/units.json
@@ -839,7 +839,9 @@
 			"xmasball2_3": "Xmas ball",
 			"xmasball2_4": "Xmas ball",
 			"xmasball2_5": "Xmas ball",
-			"xmasball2_6": "Xmas ball"
+			"xmasball2_6": "Xmas ball",
+			"legnanotc": "Construction Turret",
+			"legnanotcplat": "NavalConstruction Turret",
 		},
 		"descriptions": {
 			"armaak": "Advanced Amphibious Anti-Air Bot",
@@ -1674,6 +1676,8 @@
 			"xmasball2_4": "Xmas ball",
 			"xmasball2_5": "Xmas ball",
 			"xmasball2_6": "Xmas ball"
+			"legnanotc": "Assist & Repair in large radius",
+			"legnanotcplat": "Builds and Repairs in large radius",
 		}
 	}
 }
