add leggeo and legestor

--- a/language/en/units.json
+++ b/language/en/units.json
@@ -451,6 +451,7 @@
 			"corenaa": "Naval Birdshot",
 			"corerad": "Eradicator",
 			"corestor": "Energy Storage",
+			"legestor": "Energy Storage",
 			"coresupp": "Supporter",
 			"coresuppt3": "Epic Supporter",
 			"coreter": "Obscurer",
@@ -485,6 +486,7 @@
 			"corgator": "Incisor",
 			"corgatreap": "Laser Tiger",
 			"corgeo": "Geothermal Powerplant",
+			"leggeo": "Geothermal Powerplant",
 			"coruwgeo": "Geothermal Powerplant",
 			"corgol": "Tzar",
 			"corgolt4": "Epic Tzar",
@@ -1284,6 +1286,7 @@
 			"corenaa": "Anti-Air Flak Gun - Naval Series",
 			"corerad": "Bomb-Resistant Medium-Range Anti-Air Missile Battery",
 			"corestor": "Increases Energy Storage (6000)",
+			"legestor": "Increases Energy Storage (6000)",
 			"coresupp": "Light Gun Boat",
 			"coresuppt3": "Super Heavy Assault Corvette",
 			"coreter": "Radar Jammer Vehicle",
@@ -1318,6 +1321,7 @@
 			"corgator": "Light Tank",
 			"corgatreap": "Heavy Assault Tank",
 			"corgeo": "Produces 300 Energy",
+			"leggeo": "Produces 300 Energy",
 			"coruwgeo": "Produces 300 Energy",
 			"corgol": "Very Heavy Assault Tank",
 			"corgolt4": "Tzar, but bigger.",
