Add legageo and WIP antinuke

--- a/language/en/units.json
+++ b/language/en/units.json
@@ -380,6 +380,7 @@
 			"coradvsol": "Advanced Solar Collector",
 			"corafus": "Advanced Fusion Reactor",
 			"corageo": "Advanced Geothermal Powerplant",
+			"legageo": "Advanced Geothermal Powerplant",
 			"coruwageo": "Advanced Geothermal Powerplant",
 			"corah": "Birdeater",
 			"corak": "Grunt",
@@ -1214,6 +1215,7 @@
 			"coradvsol": "Produces 75 Energy",
 			"corafus": "Produces 3000 Energy (Hazardous)",
 			"corageo": "Produces 1250 Energy (Hazardous)",
+			"legageo": "Produces 1250 Energy (Hazardous)",
 			"coruwageo": "Produces 1250 Energy (Hazardous)",
 			"corah": "Anti-Air Hovercraft",
 			"corak": "Fast Infantry Bot",
