updating Keybindings of Keys (top right button ingame)
Changed variable names of some things, and updated the descriptions.

Corrected selection keys.

Capitalized some order descriptions.

--- a/language/de/interface.json
+++ b/language/de/interface.json
@@ -354,14 +354,14 @@
 				"title": "Bauaufträge auswählen",
 				"selectTileKey": "(Maus)",
 				"selectTile": "Aus Einheitenbaumenü auswählen",
-				"metalKey": "Y",
-				"metal": "Durch Metallextraktoren schalten",
-				"energyKey": "X",
-				"energy": "Durch Energieproduktion schalten",
-				"intelKey": "C",
-				"intel": "Durch Radar/Verteidigung/etc. schalten",
-				"factoriesKey": "V",
-				"factories": "Durch Fabriken schalten",
+				"economyKey": "Y",
+				"economy": "Durch Metallextraktoren schalten",
+				"combatKey": "X",
+				"combat": "Durch Energieproduktion schalten",
+				"utilityKey": "C",
+				"utility": "Durch Radar/Verteidigung/etc. schalten",
+				"buildKey": "V",
+				"build": "Durch Fabriken schalten",
 				"rotateKey": "ü und +",
 				"rotate": "Gebäudeausrichtung ändern"
 			},
