--- a/language/en/interface.json
+++ b/language/en/interface.json
@@ -362,21 +362,21 @@
 			"orders": {
 				"title": "Selecting orders",
 				"defaultKey": "(none)",
-				"default": "default order (usually move)",
-				"move": "move",
-				"attack": "attack",
-				"stop": "stop (clears order queue)",
-				"repair": "repair",
-				"reclaim": "reclaim",
-				"resurrect": "resurrect",
-				"patrol": "patrol",
-				"fight": "fight",
-				"setTarget": "set priority target",
-				"cancelTarget": "cancel priority target",
-				"wait": "wait (pause current command)",
-				"cloak": "cloak",
-				"dGun": "manual fire (dgun)",
-				"selfDestruct": "self-destruct"
+				"default": "Default order (usually move)",
+				"move": "Move",
+				"attack": "Attack",
+				"stop": "Stop (clears order queue)",
+				"repair": "Repair",
+				"reclaim": "Reclaim",
+				"resurrect": "Resurrect",
+				"patrol": "Patrol",
+				"fight": "Fight",
+				"setTarget": "Set priority target",
+				"cancelTarget": "Cancel priority target",
+				"wait": "Wait (pause current command)",
+				"cloak": "Cloak",
+				"dGun": "Manual fire (dgun)",
+				"selfDestruct": "Self-destruct"
 			},
 			"issueOrders": {
 				"title": "Giving selected orders",
@@ -398,14 +398,14 @@
 				"title": "Selecting build orders",
 				"selectTileKey": "(mouse)",
 				"selectTile": "Select from units build-menu",
-				"metalKey": "z",
-				"metal": "Cycle through mexes",
-				"energyKey": "x",
-				"energy": "Cycle through energy production",
-				"intelKey": "c",
-				"intel": "Cycle through radar/defence/etc",
-				"factoriesKey": "v",
-				"factories": "Cycle through factories",
+				"economyKey": "z",
+				"economy": "Category: Economy",
+				"combatKey": "x",
+				"combat": "Category: Combat",
+				"utilityKey": "c",
+				"utility": "Category: Utility",
+				"buildKey": "v",
+				"build": "Category: Build",
 				"rotateKey": "[ and ]",
 				"rotate": "Change facing of buildings"
 			},
@@ -426,10 +426,10 @@
 			},
 			"massSelect": {
 				"title": "Group selection",
-				"allKey": "ctrl + a",
+				"allKey": "ctrl + e",
 				"all": "Select all units",
-				"buildersKey": "ctrl + b",
-				"builders": "Select all constructors",
+				"buildersKey": "ctrl + tab",
+				"builders": "Select idle constructor",
 				"createGroupKey": "ctrl + (num)",
 				"createGroup": "Add units to group (num=1,2,..)",
 				"createAutoGroupKey": "alt + (num)",
@@ -438,7 +438,7 @@
 				"removeAutoGroup": "Remove unit type from autogroup",
 				"groupKey": "(num)",
 				"group": "Select all units assigned to group (num)",
-				"sameTypeKey": "ctrl + z",
+				"sameTypeKey": "q",
 				"sameType": "Select all units of same type as selected"
 			},
 			"drawing": {
