--- a/language/fr/interface.json
+++ b/language/fr/interface.json
@@ -363,14 +363,14 @@
 				"title": "Parcourir les entités",
 				"selectTileKey": "(souris)",
 				"selectTile": "Sélectionner depuis menu de construction",
-				"metalKey": "z",
-				"metal": "Parcourir extracteurs de métal",
-				"energyKey": "x",
-				"energy": "Parcourir générateurs d'énergie",
-				"intelKey": "c",
-				"intel": "Parcourir radars/défenses/...",
-				"factoriesKey": "v",
-				"factories": "Parcourir les usines",
+				"economyKey": "z",
+				"economy": "Parcourir extracteurs de métal",
+				"combatKey": "x",
+				"combat": "Parcourir générateurs d'énergie",
+				"utilityKey": "c",
+				"utility": "Parcourir radars/défenses/...",
+				"buildKey": "v",
+				"build": "Parcourir les usines",
 				"rotateKey": "^ et $",
 				"rotate": "Changer le sens du bâtiment"
 			},
